# txt2sql

./: .env  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/components/: __init__.py  database_viewer.py  metrics_panel.py  query_input.py  results_view.py  sidebar.py
app/pages/: 01_📊_Database_Viewer.py
configs/: judge_prompts.yaml  model_params.yaml  sql_generator_prompts.yaml
configs/prompts/: database_descriptions.yaml  router_prompts.yaml  sql_generator_prompts.yaml  sql_judge_prompts.yaml  sql_refiner_prompts.yaml
scripts/: quick_reindex.py  reindex.py  reindex_full.py  test_pipeline.py
src/: __init__.py
src/agents/: __init__.py  query_understanding.py  router_agent.py  sql_generator.py  sql_judge.py  sql_refiner.py  sql_validator.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  executor.py  guardrails.py  multi_db_executor.py  schema_loader.py
src/llm/: __init__.py  inference.py  llm_cache.py  model_loader.py  ollama_service.py  prompt_loader.py  prompts.py  transformers_service.py
src/pipeline/: __init__.py  langgraph_pipeline.py  multi_db_pipeline.py  pipeline.py  production_pipeline.py  state.py  text2sql_pipeline.py
src/retrieval/: __init__.py  embedder.py  graph_db.py  schema_compressor.py  schema_retriever.py  vector_db.py
src/services/: __init__.py  metrics.py  pipeline_service.py  preflight.py  result_cache.py
src/utils/: __init__.py  config_loader.py  json_parser.py  logging_utils.py  optimizations.py  rate_limiter.py  retry.py  sql_parser.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_config.py  test_db.py  test_pipeline.py  test_retrieval.py  test_utils.py
